# boot-check

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build_production.bat  build_production.ps1  build_production.sh  clean.bat  clean.ps1  deploy.ps1  main.cpp
final/: README.txt
